# software-division

./: README.md
attacker/: CMakeLists.txt
attacker/.cache/clangd/index/: ConsoleView.cpp.2BBD440D4A5AFA3B.idx  ConsoleView.cpp.A8D862C1CA3CCB7D.idx  ConsoleView.h.395DB2AD58F16AA9.idx  ConsoleView.h.E7BDB9B9B7C04043.idx  ICommand.h.3FF244DBF0286AE2.idx  ICommand.h.A295AA7C6E0F9A4D.idx  MainWindow.cpp.80323C843C7B8D0E.idx  MainWindow.cpp.AAFA32F264358F00.idx  MainWindow.h.3EA1C289E74BD299.idx  MainWindow.h.CDEA6D6BC7897AD8.idx  RequestHandler.cpp.B1ECCDB77588B3A3.idx  RequestHandler.cpp.C99D7D30E6C59DDD.idx  RequestHandler.h.5A06A82D4F8B6AC3.idx  RequestHandler.h.E4AC162BEE7D780D.idx  Scanner.cpp.B89F8641DD6E53D2.idx  Scanner.cpp.E8A683AB9C622457.idx  Scanner.h.44CCB055F2158C86.idx  Scanner.h.91E8E81EE702EA64.idx  StartScanCommand.h.6B71471125F5B3B4.idx  StartScanCommand.h.A555E821511BBC5F.idx  StopScanCommand.h.87C48DC3B125417F.idx  StopScanCommand.h.D491099BD30F80A0.idx  VulnerabilityRepository.cpp.28AA8DAB0205EA13.idx  VulnerabilityRepository.cpp.DB4E81388FC6C112.idx  VulnerabilityRepository.h.63369BDF1DB48682.idx  VulnerabilityRepository.h.A06035A82AD7BA00.idx  (+6 more)
attacker/src/: main.cpp  mainCli.cpp
attacker/src/commands/: ICommand.h  StartScanCommand.h  StopScanCommand.h
attacker/src/controller/: RequestHandler.cpp  RequestHandler.h
attacker/src/model/: Scanner.cpp  Scanner.h  VulnerabilityRepository.cpp  VulnerabilityRepository.h  VulnerabilityTypes.h
attacker/src/view/: ConsoleView.cpp  ConsoleView.h  MainWindow.cpp  MainWindow.h
